--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+html {
+  background: #2b3033;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,7 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+img{
+  width: 300px;
 }
